# compiler

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
.github/workflows/: cmake-multi-platform.yml
examples/: main_test.c0  semantic.c0  test.c0  util.c0  weird.c0  zefinal.c0
src/: main.cpp  token.hpp
src/alloc/: arena.hpp
src/analysis/: liveness.cpp  liveness.hpp  semantics.cpp  semantics.hpp  symbol.hpp  type_check.cpp  type_check.hpp
src/code_gen/: instruction_selection.hpp  interference_graph.cpp  interference_graph.hpp  register_alloc.cpp  register_alloc.hpp  yapper.hpp
src/codegen/arch/: arch.hpp
src/codegen/arch/x86/: arch_x86.hpp
src/defs/: ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp  source_location.hpp  token.cpp  token.hpp  type.hpp
src/graph_coloring/: graph_coloring.cpp  graph_coloring.hpp
src/io/: io.cpp  io.hpp  resource_manager.hpp
src/ir/: cfg.hpp  ir.hpp  ir_builder.cpp  ir_builder.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/mir/: mir.hpp  mir_generator.cpp  mir_generator.hpp
src/opt/ir/: ir_optimization_pass.hpp
src/opt/mir/: mir_optimization_pass.hpp  peephole_pass.cpp  peephole_pass.hpp
src/parser/: parser.cpp  parser.hpp
src/report/: error_report.hpp  report_builder.hpp
src/util/: graph_helper.hpp
